--- a/package.json
+++ b/package.json
@@ -17,17 +17,17 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "chalk": "^1.1.0",
-    "lodash": "^4.11.0",
-    "applause": "1.2.2",
-    "file-sync-cmp": "^0.1.0"
+    "chalk": "^2.*",
+    "lodash": "^4.*",
+    "applause": "^1.*",
+    "file-sync-cmp": "^0.1.*"
   },
   "devDependencies": {
-    "grunt": "^1.0.0",
-    "grunt-contrib-clean": "^1.0.0",
-    "grunt-contrib-jshint": "^1.0.0",
-    "grunt-mocha-test": "^0.12.0",
-    "mocha": "^2.4.5"
+    "grunt": "^1.*",
+    "grunt-contrib-clean": "^2.*",
+    "grunt-contrib-jshint": "^2.*",
+    "grunt-mocha-test": "^0.13.*",
+    "mocha": "^6.*"
   },
   "keywords": [
     "gruntplugin",
